--- a/VidCoder/Resources/Translations/CommonRes.fr.resx
+++ b/VidCoder/Resources/Translations/CommonRes.fr.resx
@@ -132,7 +132,9 @@ Traduit en Français par TheCrazyRabbit...</value>
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
     <value>Marquer cette piste de sous-titre par défaut. Cela sera visible pendant la lecture jusqu'à ce qu'une autre piste soit choisie.</value>
   </data>
-  
+  <data name="ForcedSubtitleToolTip" xml:space="preserve">
+    <value>Afficher uniquement les sous-titres forcés des pistes de sous-titres. Cela signifie généralement de petits morceaux de dialogue étranger.</value>
+  </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
     <value>La quantité de temps pour faire avancer ou retarder l'apparition des sous-titres donnés.</value>
   </data>
@@ -281,21 +283,67 @@ Traduit en Français par TheCrazyRabbit...</value>
     <value>Premièr</value>
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DuplicateTrack" xml:space="preserve">
+    <value>Dupliquer cette piste</value>
+    <comment>Tip to duplicate the audio or subtitle track.</comment>
+  </data>
+  <data name="RemoveTrack" xml:space="preserve">
+    <value>Supprimer cette piste</value>
+    <comment>Tip for button to remove the audio or subtitle track.</comment>
+  </data>
+  <data name="SelectedOverTotalAudioTracksFormat" xml:space="preserve">
+    <value>{0}/{1} piste(s) audio</value>
+    <comment>{0} is the number of selected audio tracks and {1} is the number of total tracks on the source.</comment>
+  </data>
+  <data name="SelectedOverTotalSubtitleTracksFormat" xml:space="preserve">
+    <value>{0}/{1} piste(s) de sous-titres</value>
+    <comment>{0} is the number of selected subtitle tracks and {1} is the number of total tracks on the source.</comment>
+  </data>
+  <data name="NumberBoxIncreaseButtonAutomationTextFormat" xml:space="preserve">
+    <value>Augmenter {0}</value>
+    <comment>Automation text for the increase button on the number box.
+{0} - The name of the value the control is changing, for example "width"</comment>
+  </data>
+  <data name="NumberBoxDecreaseButtonAutomationTextFormat" xml:space="preserve">
+    <value>Diminuer {0}</value>
+    <comment>Automation text for the decrease button on the number box.
+{0} - The name of the value the control is changing, for example "width"</comment>
+  </data>
+  <data name="OpenSplitButtonAutomationName" xml:space="preserve">
+    <value>Ouvrir menu déroulant</value>
+    <comment>Automation name for screen readers for the "open" arrow on a split button</comment>
+  </data>
+  <data name="Unknown" xml:space="preserve">
+    <value>Inconnu</value>
+    <comment>Used when a value is not known.</comment>
+  </data>
+  <data name="DefaultLabel" xml:space="preserve">
+    <value>Défaut :</value>
+  </data>
+  <data name="QueueColumnNameAudioTracks" xml:space="preserve">
+    <value>Pistes audio</value>
+  </data>
+  <data name="QueueColumnNameCropping" xml:space="preserve">
+    <value>Recadrage</value>
+  </data>
+  <data name="QueueColumnNameOutputSize" xml:space="preserve">
+    <value>Taille de sortie</value>
+  </data>
+  <data name="QueueColumnNameSubtitleTracks" xml:space="preserve">
+    <value>Pistes de sous-titres</value>
+  </data>
+  <data name="Manual" xml:space="preserve">
+    <value>Manuel</value>
+    <comment>Shown when something has been set manually</comment>
+  </data>
+  <data name="FileNoLongerExists" xml:space="preserve">
+    <value>Ce fichier n'existe plus.</value>
+  </data>
+  <data name="MegabytesAbbreviation" xml:space="preserve">
+    <value>Mo</value>
+    <comment>Abbreviation for megabytes</comment>
+  </data>
+  <data name="Enabled" xml:space="preserve">
+    <value>Activé</value>
+  </data>
 </root>
