--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -396,4 +396,10 @@
   <data name="WatchedFileStatusLive_Output" xml:space="preserve">
     <value>Output</value>
   </data>
+  <data name="WatcherMode_FileSystemWatcher" xml:space="preserve">
+    <value>System watcher</value>
+  </data>
+  <data name="WatcherMode_Polling" xml:space="preserve">
+    <value>Polling</value>
+  </data>
 </root>
