Added an option to remove the cap of 3 simultaneous NVEnc encodes. Only those that have custom NVidia drivers that remove the cap should choose this. Increased the maximum simultaneous encode setting cap to 16.

--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -416,4 +416,7 @@ Polling: Periodically checks the contents of the folders. Uses significant CPU a
   <data name="HardwareEncodingSection" xml:space="preserve">
     <value>Hardware encoding</value>
   </data>
+  <data name="CapNVEncCheckBox" xml:space="preserve">
+    <value>Cap simultaneous NVEnc encodes. Removing this requires a custom NVidia driver patch.</value>
+  </data>
 </root>
